link_libraries("-L${BOOST_LIBRARYDIR}")
add_subdirectory(common)
add_subdirectory(echo)
add_subdirectory(transfer_timeline)
add_subdirectory(cupti)
add_subdirectory(synchtool)
add_subdirectory(timecall)
add_subdirectory(stacktrace)
add_subdirectory(DriverAPITrace)
add_subdirectory(timetofirstuse)
add_subdirectory(datatransfer)
add_subdirectory(datasynctimer)
add_subdirectory(memmanager)
add_subdirectory(memrecorder)
add_subdirectory(FindSyncHelper)