add_library(DataTransfer SHARED "DataTransfer.cpp")
add_compile_options(-O3 -g)
target_link_libraries(DataTransfer ${Boost_LIBRARIES})
target_link_libraries(DataTransfer ${DYNINST_LIBRARIES})
target_link_libraries(DataTransfer "-lpthread")
target_link_libraries(DataTransfer DriverAPIWrapper)
target_link_libraries(DataTransfer PluginCommon)
INCLUDE_DIRECTORIES(DataTransfer ${CUDA_TOOLKIT_ROOT_DIR}/include)
INCLUDE_DIRECTORIES(DataTransfer ${CUDA_TOOLKIT_ROOT_DIR}/extras/CUPTI/include)
INCLUDE_DIRECTORIES(DataTransfer ${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/common")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/driverapi")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/deduplicate")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/driverapi/launcher")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/driverapi/plugins/common")
target_link_libraries(DataTransfer "-L${CUDA_TOOLKIT_ROOT_DIR}/lib64 -lcudart -L${CUDA_TOOLKIT_ROOT_DIR}/extras/CUPTI/lib64 -lcupti -lboost_timer")
install(TARGETS DataTransfer
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib/plugins
        ARCHIVE DESTINATION lib/static)
