add_compile_options(-O3 -g -mno-vsx)
add_compile_options(-mno-vsx)
add_library(SynchTool SHARED "SynchTool.cpp" "CheckAccesses.cpp" "OutputWriter.cpp" "LoadStoreDriver.cpp")
target_link_libraries(SynchTool ${Boost_LIBRARIES})
target_link_libraries(SynchTool ${DYNINST_LIBRARIES})
target_link_libraries(SynchTool "-ldyninstAPI_RT")
target_link_libraries(SynchTool "-lpthread")
target_link_libraries(SynchTool DriverAPIWrapper)
target_link_libraries(SynchTool PluginCommon)
INCLUDE_DIRECTORIES(SynchTool ${CUDA_TOOLKIT_ROOT_DIR}/include)
INCLUDE_DIRECTORIES(SynchTool ${CUDA_TOOLKIT_ROOT_DIR}/extras/CUPTI/include)
INCLUDE_DIRECTORIES(SynchTool ${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/common")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/driverapi")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/deduplicate")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/driverapi/launcher")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/driverapi/plugins/common")
target_link_libraries(SynchTool "-L${GOTTCHA_LIBRARIES} -lgotcha" )
INCLUDE_DIRECTORIES(SynchTool ${GOTTCHA_INCLUDE})
target_link_libraries(SynchTool "-L${CUDA_TOOLKIT_ROOT_DIR}/lib64 -lcudart -L${CUDA_TOOLKIT_ROOT_DIR}/extras/CUPTI/lib64 -lcupti -lboost_timer")
install(TARGETS SynchTool
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib/plugins
        ARCHIVE DESTINATION lib/static)
